--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       else {
         localStorage.removeItem(tokenKey);
       }
-      closeModal();
+      closeModal('tokenModal');
     }
     function deleteToken() {
       tokenInput.value = '';
