--- a/restaurant/summary.html
+++ b/restaurant/summary.html
@@ -74,7 +74,7 @@
     // organized
     let state = { 
       SHEETNAME: 'RestaurantVisits',
-      helpId: 'helptext-restaurant-summary',
+      helpId: 'helptext-summary',
       historicalData: [],
       filteredData: [],
       formFields: restaurantFields,
