--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -44,7 +44,7 @@
 
   <div class="modal" id="addModal">
     <div class="modal-content" id="addModalContent">
-      <h3 data-i18n="addrestaurant"></h3>
+      <h3 data-i18n="additem"></h3>
       <div id="addRequiredInfoContainer">
       </div>
       <div class="form-row">
