--- a/restaurant/summary.html
+++ b/restaurant/summary.html
@@ -98,7 +98,7 @@
       }
       buildSummaryTableHeaders(state);
       applyTranslations();
-      if (localStorage['history_range']){
+      if (localStorage['history_range' + state.SHEETNAME]){
         document.getElementById("historyRange").value = localStorage['history_range'];
       }
       await loadHistoryData(state);
