--- a/restaurant/summary.html
+++ b/restaurant/summary.html
@@ -64,7 +64,7 @@
 
   <div class="modal" id="groupDetailModal">
     <div class="modal-content">
-      <h3 data-i18n="groupdetails">Group Details</h3>
+      <h3 data-i18n="groupdetails"></h3>
       <div id="groupDetailTableWrapper"></div>
       <button class="cancel-btn" onclick="closeModal('groupDetailModal')" data-emoji="cancel"></button>
     </div>
