one more spot for chinese

--- a/travel/index.html
+++ b/travel/index.html
@@ -77,7 +77,7 @@
         </select>
       </div>
       <div class="form-row">
-        <input type="text" id="tripNameInput" placeholder="Enter trip name" list="tripnameList" autocomplete="on">
+        <input type="text" id="tripNameInput" data-i18n-placeholder="entertripname" list="tripnameList" autocomplete="on">
         <button onclick="showTripTable()" data-emoji="filter"></button>
       </div>
       <button class="cancel-btn" onclick="closeModal('filterModal')" data-emoji="cancel"></button>
