--- a/drink/summary.html
+++ b/drink/summary.html
@@ -99,7 +99,7 @@
       buildSummaryTableHeaders(state);
       applyTranslations();
       if (localStorage['history_range' + state.SHEETNAME]){
-        document.getElementById("historyRange").value = localStorage['history_range'];
+        document.getElementById("historyRange").value = localStorage['history_range' + state.SHEETNAME];
       }
       await loadHistoryData(state);
       enableButtons();
