--- a/restaurant/pizza.html
+++ b/restaurant/pizza.html
@@ -116,7 +116,7 @@
     buildTableHeaders(state);
     updateSortIndicators(state);
     if (localStorage['history_range' + state.SHEETNAME]){
-      document.getElementById("historyRange").value = localStorage['history_range'];
+      document.getElementById("historyRange").value = localStorage['history_range'+ state.SHEETNAME];
     }
     await loadHistoryData(state);
     updateCountdown(state);
