--- a/travel/index.html
+++ b/travel/index.html
@@ -78,7 +78,7 @@
       </div>
       <div class="form-row">
         <input type="text" id="tripNameInput" data-i18n-placeholder="entertripname" list="tripnameList" autocomplete="on">
-        <button onclick="showTripTable()" data-emoji="filter"></button>
+        <button class="clear-button" onclick="showTripTable()" data-emoji="check"></button>
       </div>
       <button class="cancel-btn" onclick="closeModal('filterModal')" data-emoji="cancel"></button>
     </div>
