--- a/fun/lego.html
+++ b/fun/lego.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title data-emoji="movies"></title>
+<title data-emoji="lego"></title>
 <link rel="stylesheet" href="../css/style.css?v=1.0.3" />
 <link rel="stylesheet" href="../css/style-table.css?v=1.0.3" />
 </head>
@@ -113,12 +113,12 @@
 <script>
   // load data
   let state = { 
-    SHEETNAME: 'ShowList',
+    SHEETNAME: 'LegoList',
     helpId: 'helptext-aio',
     nextId: 0,
     historicalData: [],
     filteredData: [],
-    formFields: showfields,
+    formFields: legoFields,
     tableId: 'dataTable',
     currentFilter: {
       column: null,
@@ -130,7 +130,7 @@
     summary: false,
     addwithtable: true,
     editIndex: null,
-    groupByCols: ['showtype'],
+    groupByCols: ['actiontype'],
     aggCols: [],
     currentSort: { column: "date", asc: false }
   };
