--- a/drink/history.html
+++ b/drink/history.html
@@ -78,28 +78,11 @@
 
   <script>
     // load data
-    let state = { 
-      SHEETNAME: 'DrinkList',
-      get formFields() {
-        return startingForm[this.SHEETNAME]?.baseFields || [];
-      },
-      helpId: 'helptext-history',
-      historicalData: [],
-      filteredData: [],
-      tableId: 'historicTable',
-      currentFilter: {
-        column: null,
-        type: null,
-        from: null,
-        to: null,
-        value: null
-      },
-      editIndex: null,
-      currentSort: { column: "date", asc: false }
-    };
+    let state = {};
 
     window.addEventListener("DOMContentLoaded", async () => {
       disableButtons();
+      populateState(state, 'DrinkList', 'helptext-history', 'historicTable', 'filter');
       initializeFilterInput(state, true, false);
       applyHistoryRangeFromCache(state);
       await loadHistoryData(state);
