--- a/entertainment/activity.html
+++ b/entertainment/activity.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title data-emoji="ideas"></title>
+<title data-emoji="fun"></title>
 <link rel="stylesheet" href="../css/style.css?v=1.0.3" />
 <link rel="stylesheet" href="../css/style-table.css?v=1.0.3" />
 </head>
@@ -77,10 +77,6 @@
     </div>
   </div>
 
-  <datalist id="projectList">
-    <!-- Options will be populated here by JS -->
-  </datalist>
-
   <div class="modal" id="addModal">
     <div class="modal-content" id="addModalContent">
       <h3 data-i18n="additem"></h3>
@@ -116,38 +112,11 @@
 
 <script>
   // load data
-  let state = { 
-    SHEETNAME: 'IdeaList',
-    get formFields() {
-      return startingForm[this.SHEETNAME]?.baseFields || [];
-    },
-    helpId: 'helptext-aio',
-    nextId: 0,
-    historicalData: [],
-    filteredData: [],
-    tableId: 'dataTable',
-    currentFilter: {
-      column: null,
-      type: null,
-      from: null,
-      to: null,
-      value: null
-    },
-    summary: false,
-    addwithtable: true,
-    editIndex: null,
-    groupByCols: ['project'],
-    aggCols: [],
-    currentSort: { column: "date", asc: false },
-
-    /* optional */
-    datalistkey: 'project',
-    datalistid: 'projectList',
-    names: []
-  };
+  let state = {};
 
   window.addEventListener("DOMContentLoaded", async () => {
     disableButtons();
+    populateState(state, 'ActivityList', 'helptext-aio', 'dataTable', 'filtersummary');
     initializeFilterInput(state, true, true);
     applyHistoryRangeFromCache(state);
     applyTranslations();
