--- a/health/index.html
+++ b/health/index.html
@@ -112,33 +112,11 @@
 
 <script>
   // load data
-  let state = { 
-    SHEETNAME: 'HealthList',
-    get formFields() {
-      return startingForm[this.SHEETNAME]?.baseFields || [];
-    },
-    helpId: 'helptext-aio',
-    nextId: 0,
-    historicalData: [],
-    filteredData: [],
-    tableId: 'dataTable',
-    currentFilter: {
-      column: null,
-      type: null,
-      from: null,
-      to: null,
-      value: null
-    },
-    summary: false,
-    addwithtable: true,
-    editIndex: null,
-    groupByCols: ['eventtype'],
-    aggCols: [],
-    currentSort: { column: "date", asc: false }
-  };
+  let state = {};
 
   window.addEventListener("DOMContentLoaded", async () => {
     disableButtons();
+    populateState(state, 'HealthList', 'helptext-aio', 'dataTable', 'filtersummary');
     initializeFilterInput(state, true, true);
     applyHistoryRangeFromCache(state);
     applyTranslations();
