--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <button class="big-btn" onclick="window.location.href='travel/index.html'">
       <div class="emoji" data-emoji="travel"></div>
     </button>
-    <button class="big-btn" onclick="window.location.href='fun/index.html'">
+    <button class="big-btn" onclick="window.location.href='entertainment/index.html'">
       <div class="emoji" data-emoji="fun"></div>
     </button>
     <button class="big-btn" onclick="window.location.href='health/index.html'">
